demo/bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http2-app
        protocol: HTTP2
      hosts:
        - "demo-app.$ISTIO_BASIC_URL"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https-app
        protocol: HTTPS
      hosts:
        - "demo-app.$ISTIO_BASIC_URL"
      tls:
        mode: SIMPLE
        credentialName: "$GATEWAY_CREDENTIAL"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "demo-app.$ISTIO_BASIC_URL"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
